# duck-template

./: CHANGELOG.md  Cargo.toml  README.md  duck-template.json  rustfmt.toml  wildduck-template.json
.github/: labels.sh  protect-branches.sh
.github/workflows/: ci.yml
.husky/: pre-push
output/: package.json  tsconfig.json
output/public/: index.html
output/src/: server.ts
public/: schema.json
src/: main.rs
src/config/: config_structure.rs  fetch_config.rs  mod.rs
src/config/__test__/: mod.rs
src/config/read_config/: mod.rs
src/create_command/: create_structure.rs  mod.rs  parse_create_command.rs
src/create_command/__test__/: mod.rs
src/create_variant_command/: create_variant_structure.rs  mod.rs
src/create_variant_command/__test__/: mod.rs
src/hasher/: mod.rs
src/hasher/__test__/: mod.rs
src/help_command/: mod.rs
src/help_command/__test__/: mod.rs
src/init_command/: init_structure.rs  mod.rs  parase_init_command.rs
src/init_command/__test__/: mod.rs
src/logger/: mod.rs
src/logger/__test__/: mod.rs
src/parse_commands/: commands_structure.rs  get_flag_value.rs  mod.rs
src/parse_commands/__test__/: mod.rs
src/template/: mod.rs
src/template/__test__/: mod.rs
