[package]
name = "duck-template"
version = "0.1.2"
edition = "2024"
description = "A cli tool for generating files from a template just with a json file"
license = "MIT"     
repository = "https://github.com/gentleeduck/duck-template"  
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "template"]


[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
url = "2.5.4"

