[package]
name = "duck-template"
version = "0.1.7"
edition = "2024"
description = "A cli tool for generating files from a template just with a json file"
license = "MIT"     
repository = "https://github.com/gentleeduck/duck-template"  
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "template"]


[dependencies]
httpmock = "0.7.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
url = "2.5.4"

